--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "highlight.js": "^11.11.0",
     "markdown-to-jsx": "^7.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
