--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@webcontainer/api": "^1.5.1-internal.4",
     "axios": "^1.7.9",
     "highlight.js": "^11.11.0",
     "markdown-to-jsx": "^7.7.1",
